[package]
name = "base64-simd-wasm-vn"
description = "Base64 SIMD for WebAssembly"
version = "1.0.0"
edition = "2024"
repository = "https://github.com/ndtao2020/base64-simd-wasm-vn"
authors = ["Nguyen Dinh Tao <ndtao2020@gmail.com>"]
license = "MIT License"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[dependencies]
alloc_cat = "1"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", default-features = false, features = ["js"] }
base64-simd = { version = "0.8", default-features = false, features = [
    'alloc',
] }
