[package]
name = "base64-simd-wasm-vn"
description = "Base64 SIMD for WebAssembly"
version = "1.1.2"
edition = "2024"
repository = "https://github.com/ndtao2020/base64-simd-wasm-vn"
authors = ["Nguyen Dinh Tao <ndtao2020@gmail.com>"]
license = "MIT License"
readme = "README.md"

[lib]
name = "base64_simd_wasm_vn" # This must match your WASM filename
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1

[dependencies]
alloc_cat = "1"
wasm-bindgen = "0.2"
base64-simd = { version = "0.8", default-features = false, features = [
    'alloc',
] }
